# data-monkey

./: PLAN.md  README.md  main.py  pyproject.toml  test_e2e.py
data/: customers.csv  sales.csv  sales_output.csv  sales_output.parquet
src/data_monkey/: __init__.py  server.py
